Applying & emitting increments on undo / redo

--- a/packages/excalidraw/package.json
+++ b/packages/excalidraw/package.json
@@ -62,7 +62,7 @@
     "@excalidraw/random-username": "1.1.0",
     "@radix-ui/react-popover": "1.0.3",
     "@radix-ui/react-tabs": "1.0.2",
-    "@types/async-lock": "1.4.2",
+    "@types/async-lock": "^1.4.2",
     "async-lock": "^1.4.1",
     "browser-fs-access": "0.29.1",
     "canvas-roundrect-polyfill": "0.0.1",
